# energy-monitoring-tool

./: .coveragerc  .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  READMEs.md  index.html  mkdocs.yml  objects.inv  philips-repo.yaml  pyproject.toml  setup.py  sonar-project.properties
.github/: pull_request.yml
.github/actions/create-cached-conda-environment/: action.yml
.github/workflows/: github-pages.yml  pull_request.yml  release_request.yml
assets/: energy_access.service  energy_attribution.html
conclusion/: index.html
docs/: getting_started.md  how_EMT_works.md  index.md  introduction.md  roadmap.md  rust_collector_issues.md  trace_rotation.md  tui_terminal_restoration.md  usage_modes.md  virtualization_challenges.md  virtualization_strategies.md
docs/assets/: custom.css  emt_oneslider.html  energy_attribution.html  measurement_imperative.html
emt/: __init__.py  cfgup.py  cli.py  energy_meter.py  energy_monitor.py  power_group.py
emt/collector/: Cargo.toml
emt/collector/src/: main.rs  utils.rs
emt/collector/src/power_groups/: rapl.rs  tracker.rs
emt/collector_b/: Cargo.toml
emt/collector_b/src/: main.rs  power_groups.rs  rapl_soc_cpu.rs
emt/groups/: intel_cpu.py  power_group.py
emt/power_groups/: __init__.py  intel_cpu.py  nvidia_gpu.py  power_group.py  rapl.py  rapl_soc_cpu.py  test_pg.ipynb  utils.py
emt/rust/: Cargo.toml
emt/rust/examples/: collector_comparison.rs
emt/rust/src/: demo.rs  energy_monitor.rs  main.rs
emt/rust/src/power_groups/: dummy.rs  energy_group.rs  mod.rs  nvidia_gpu.rs  rapl.rs
emt/rust/src/utils/: errors.rs  logger.rs  psutils.rs
emt/utils/: __init__.py  config.json  config.py  gui.py  logger.py  powergroup_utils.py  trace_recorders.py  units.py
examples/: config_usage_example.py  mnist_pipeline.py  mnist_tf.py  mnist_torch.py  multi_scope_tf.py  sentiment_analysis_torch.py  simple_addition.py  tensor_addition.py  tensor_addition_tf.py  tensor_addition_torch.py
executive_summary/: index.html
getting_started/: index.html
groups/: __init__.py  group.py  intel_cpu.py  nvidia_gpu.py
introduction/: index.html
scripts/: benchmark_burst_attribution.py  benchmark_emt_overhead.py  burst_attribution_workload.py  probe_prometheus_power_cadence.py  release_candidate_smoke.py  verification_workload.py  verify.py
search/: search_index.json
src/: cli.rs  config.rs  energy_group.rs  lib.rs  main.rs  metrics_sink.rs  monitor.rs  process.rs  process_aggregation.rs  python.rs  trace_recorder.rs
src/collectors/: mod.rs  nvidia_gpu.rs  rapl.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/utils/: errors.rs  psutils.rs  trace_rotation.rs
tests/: features.ipynb  temp.py  test_burst_attribution_benchmark.py  test_cfgup.py  test_cli.py  test_cli_entrypoint.py  test_config.py  test_energy_meter  test_energy_meter.py  test_energy_monitor_rust_integration.py  test_foo.py  test_gui.py  test_intel_group.py  test_logger.py  test_nvidia_gpu.py  test_nvidia_group.py  test_overhead_benchmark.py  test_pgutils.py  test_psutils.py  test_rapl_group.py  test_rapl_soc.py  test_rapl_verification_fixture.py  test_release_candidate_smoke.py  test_rust_bindings.py  test_units.py  test_verification_scripts.py  test_verification_verify.py
tests/fixtures/rapl_verification/: rust_output_fixture.json
verification/: RAPL_ACCURACY_ANALYSIS.md  SUMMARY.md  py_emt_stress.py  rapl_baseline.sh  summary.md  verification_results.json  verify.py  workload.py  workload_stress.sh
virtualization_challenges/: index.html
virtualization_strategies/: index.html
