[package]
name = "emt"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
log = "0.4.27"
sysinfo = "0.35.1"
env_logger = "0.10"
users = "0.11"
rand = "0.8"
thiserror = "1.0"
polars = "0.50.0"
tokio = { version = "1.45.1", features = ["full"] }
itertools = "0.14.0"
chrono = "0.4"

