[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "emt"
description = "An energy measurement tool for machine learning related tasks"
readme = "README.md"
authors = [{ name = "Rameez Ismail", email = "rameez.ismail@philips.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10+",
]

keywords = [
    "deep-learning",
    "power",
    "energy",
    "carbon",
    "sustainability",
    "emt",
    "philips",
]
requires-python = ">=3.10"
dependencies = ["psutil", "numpy", "pandas", "pynvml", "tabulate"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/philips-internal/energy-monitoring-tool"
#Homepage = ""
#Documentation = ""

[project.optional-dependencies]
dev = ["black"]
gui = ["dash", "dash_bootstrap_components"]
test = ["pytest", "pytest-asyncio", "torch", "tensorboard"]

[tool.setuptools.packages.find]
where = ["."]
include = ["emt"]

[tool.setuptools_scm]
version_file = "_version.py"


[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | build
  | dist
  | __pycache__
  | docs
)/
'''
[tool.coverage.run]
omit = ["examples/*"]


[tool.twine]
repository = "https://your-company.jfrog.io/artifactory/api/pypi/your-repo-name"

