[build-system]
requires = ["maturin>=1.13.1,<2.0"]
build-backend = "maturin"

[project]
name = "emt"
description = "A tool for granular energy measurement, empowering digital sustainability in machine learning and AI workflows."
readme = { file = "README.md", content-type = "text/markdown" }                                                                 # Specify the readme format
authors = [{ name = "Rameez Ismail", email = "rameez.ismail@philips.com" }]
license = "MIT"                                                                                                                 # Correctly specify the license as a simple SPDX expression
license-files = ["LICENSE"]

keywords = [
  "deep-learning",
  "power",
  "energy",
  "carbon",
  "sustainability",
  "emt",
]
requires-python = ">=3.10"
dependencies = ["psutil", "numpy", "pandas", "nvidia-ml-py", "tabulate", "click"]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/FairCompute/energy-monitoring-tool"
#Homepage = ""
#Documentation = ""

[project.optional-dependencies]

dev = ["black", "pytest", "pytest-asyncio", "coverage"]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-redirects",
    "mkdocs-awesome-pages-plugin",
    "pymdown-extensions",
    "myst-parser",
    "mkdocs-git-revision-date-localized-plugin",
]

[tool.maturin]
module-name = "emt._rust"
python-source = "."
features = ["pyo3"]


[project.scripts]
emt_cfgup = "emt.cfgup:main"


[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | build
  | dist
  | __pycache__
  | docs
)/
'''
[tool.coverage.run]
omit = ["examples/*", "docs/*"]
